Fixes to align to DSL (#148)

--- a/docs/static/ds6/skin.css
+++ b/docs/static/ds6/skin.css
@@ -88,6 +88,7 @@ button.btn,
 button.expand-btn,
 a.fake-btn,
 a.cta-btn {
+  border: 1px solid;
   font-family: inherit;
   font-size: 16px;
   height: 40px;
@@ -105,8 +106,6 @@ a.cta-btn {
 }
 a.cta-btn {
   background-color: #ffffff;
-  border-style: solid;
-  border-width: 1px;
   color: #10299c;
 }
 a.cta-btn:focus,
@@ -121,6 +120,7 @@ a.cta-btn:focus {
 button.btn--small,
 button.expand-btn--small,
 a.fake-btn--small {
+  font-size: 14px;
   height: 32px;
   line-height: 32px;
 }
@@ -134,17 +134,14 @@ a.cta-btn--large {
 button.btn--primary,
 a.fake-btn--primary {
   background-color: #006efc;
-  border: 1px solid #006efc;
-  color: white;
+  border-color: #006efc;
+  color: #ffffff;
   font-weight: bold;
 }
 button.btn--primary:focus,
 a.fake-btn--primary:focus,
 button.btn--primary:hover,
-a.fake-btn--primary:hover {
-  background-color: #4295ff;
-  border-color: #4295ff;
-}
+a.fake-btn--primary:hover,
 button.btn--primary:active,
 a.fake-btn--primary:active {
   background-color: #10299c;
@@ -154,41 +151,39 @@ button.btn--primary[disabled],
 button.btn--primary[aria-disabled="true"] {
   background-color: #c7c7c7;
   border-color: #c7c7c7;
-  color: white;
+  color: #ffffff;
 }
 a.fake-btn--primary:visited {
-  color: white;
+  color: #ffffff;
 }
 a.fake-btn--primary:not([href]),
 a.fake-btn--primary[aria-disabled="true"] {
   background-color: #c7c7c7;
   border-color: #c7c7c7;
-  color: white;
+  color: #ffffff;
 }
 button.btn--secondary,
-button.expand-btn,
 a.fake-btn--secondary {
-  background-color: white;
-  border: 1px solid #c7c7c7;
+  background-color: #ffffff;
+  border-color: #006efc;
+  color: #006efc;
 }
+button.btn--secondary:focus,
+a.fake-btn--secondary:focus,
+button.btn--secondary:hover,
+a.fake-btn--secondary:hover,
 button.btn--secondary:active,
-button.expand-btn:active,
 a.fake-btn--secondary:active {
   border-color: #10299c;
   color: #10299c;
 }
-button.btn-secondary,
-a.fake-btn--secondary {
-  color: #006efc;
-}
-button.btn-secondary:focus,
-a.fake-btn--secondary:focus,
-button.btn-secondary:hover,
-a.fake-btn--secondary:hover {
-  border-color: #4295ff;
-}
 button.expand-btn {
+  background-color: #ffffff;
+  border-color: #c7c7c7;
   color: #111820;
+}
+button.expand-btn:active {
+  border-color: #111820;
 }
 button.expand-btn[aria-expanded="true"] .expand-btn__icon {
   -webkit-transform: rotate(180deg);
@@ -229,7 +224,7 @@ a.cta-btn--p002-blue:hover {
 a.cta-btn--p002-blue:active {
   background-color: #006efc;
   border-color: #006efc;
-  color: white;
+  color: #ffffff;
 }
 a.cta-btn--p002-blue:not([href]) {
   background-color: #c7c7c7;
@@ -276,7 +271,7 @@ a.cta-btn--purple:hover {
 a.cta-btn--purple:active {
   background-color: #3c0085;
   border-color: #3c0085;
-  color: white;
+  color: #ffffff;
 }
 a.cta-btn--purple:not([href]) {
   background-color: #c7c7c7;
@@ -1129,8 +1124,12 @@ span.fake-menu__status {
   width: 100%;
 }
 .combobox__control > input {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   background-color: #ffffff;
   border: 1px solid #c7c7c7;
+  border-radius: 0;
   box-sizing: border-box;
   color: transparent;
   cursor: default;
